[tool.poetry]
name = "cloudflare-ddns"
version = "0.1.0"
description = ""
authors = ["sakuv2 <loots2438@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudflare = "^2.8.6"
pydantic = {extras = ["dotenv"], version = "^1.6.1"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
